--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,3 +13,6 @@ spring:
   liquibase:
     change-log: db/changelog/changelog-master.yaml
     default-schema: good_service
+logging:
+  level:
+    ru.sber.goodservice.controller: debug
