--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -14,4 +14,4 @@ spring:
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
 logging:
   level:
-    ru.sber.crudapplication2.controller: debug
+    ru.sber.goodservice.controller: debug
